implementado sistema de adicionar usuário e criar token

--- a/WebAPIs/appsettings.json
+++ b/WebAPIs/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ROMULO\\SQLEXPRESS; Initial Catalog=message; Integrated Security=True"
+    "DefaultConnection": "Data Source=ROMULO\\SQLEXPRESS; Initial Catalog=message; Integrated Security=True; Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"
   },
   "Logging": {
     "LogLevel": {
